--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,3 +29,69 @@ jobs:
            continue-on-error: True
            run: |
               python main.py
+   Builds-02:
+      runs-on: windows-latest
+      strategy:
+         matrix:
+            python-version: [3.9, 3.9, 3.9, 3.9, 3.9]
+# =================== #
+      steps:
+         - name: Checkout
+           uses: actions/checkout@v2
+         - name: Setup Python
+           uses: actions/setup-python@v2
+           with:
+              python-version: 3.9
+         - name: Install Dependencies
+           run: |
+              python -m pip install --upgrade pip
+              pip install selenium requests random-text-generator undetected-chromedriver rich random-user-agent
+         - name: Mulai
+           timeout-minutes: 13
+           continue-on-error: True
+           run: |
+              python main.py
+    Builds-03:
+      runs-on: windows-latest
+      strategy:
+         matrix:
+            python-version: [3.9, 3.9, 3.9, 3.9, 3.9]
+# =================== #
+      steps:
+         - name: Checkout
+           uses: actions/checkout@v2
+         - name: Setup Python
+           uses: actions/setup-python@v2
+           with:
+              python-version: 3.9
+         - name: Install Dependencies
+           run: |
+              python -m pip install --upgrade pip
+              pip install selenium requests random-text-generator undetected-chromedriver rich random-user-agent
+         - name: Mulai
+           timeout-minutes: 13
+           continue-on-error: True
+           run: |
+              python main.py
+   Builds-04:
+      runs-on: windows-latest
+      strategy:
+         matrix:
+            python-version: [3.9, 3.9, 3.9, 3.9, 3.9]
+# =================== #
+      steps:
+         - name: Checkout
+           uses: actions/checkout@v2
+         - name: Setup Python
+           uses: actions/setup-python@v2
+           with:
+              python-version: 3.9
+         - name: Install Dependencies
+           run: |
+              python -m pip install --upgrade pip
+              pip install selenium requests random-text-generator undetected-chromedriver rich random-user-agent
+         - name: Mulai
+           timeout-minutes: 13
+           continue-on-error: True
+           run: |
+              python main.py
